--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+@import './common.scss';  // 分号必须
+
 html, body {
   height: 100%;
   font-size: 16px;
@@ -9,14 +11,29 @@ html, body {
 }
 
 .ld-header {
+  display: flex;
+  justify-content: center;
   width: 100%;
-  height: 100px;
+  height: 80px;
+  line-height: 80px;
 
   .ld-header_logo {
+    font-size: 60px;
+    color: $headerFontColor;
+    flex: auto;
 
+    span {
+      width: 100px;
+      cursor: pointer;
+    }
   }
   .ld-header_component {
-
+    padding-right: 40px;
+    
+    .el-button--text {
+      font-size: 18px;
+      color: #606266;
+    }
   }
 }
 
@@ -24,4 +41,5 @@ html, body {
   height: calc(100vh - 100px);
   position: relative;
   background: #f0f2f5;
+  margin-top: -21px; // todo
 }
