--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,6 +26,15 @@ html {
   font-size: 20px;
 }
 
+.mtb20 {
+  margin: 20px 0;
+}
+
+.title {
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .ld-header {
   display: flex;
   justify-content: center;
