--- a/src/components/js/base.html
+++ b/src/components/js/base.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BASE</title>
+  <script src="./正则表达式.js"></script>
 </head>
 <body>
   <div class="query">querySelector</div>
@@ -14,9 +15,7 @@
     el.style.background = 'red'
     console.log(el, 122)
 
-    let str = '1232'
-    let reg = /^[a-z0-9]$/
-    console.log(reg.test(str), 'reg')
+    
   </script>
 </body>
 </html>
