--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -39,8 +39,9 @@ html {
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 80px;
-  line-height: 80px;
+  height: 60px;
+  line-height: 60px;
+  border-bottom: 1px solid #f2f2f2;
 
   .ld-header_logo {
     font-size: 60px;
@@ -63,9 +64,8 @@ html {
 }
 
 .ld-main {
-  height: calc(100vh - 80px);
+  height: calc(100vh - 61px);
   position: relative;
-  background: #f0f2f5;
   overflow-y: auto;
   overflow-x: hidden;
   // margin-top: -21px; // todo
