--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -64,9 +64,12 @@ html {
 }
 
 .ld-main {
+  display: flex;
+  justify-content: center;
   height: calc(100vh - 61px);
   position: relative;
   overflow-y: auto;
   overflow-x: hidden;
+  background: #f2f2f2;
   // margin-top: -21px; // todo
 }
