--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@ html {
   height: 100%;
 }
 
-h1, h2, h3 {
+h1, h2, h3, pre {
   margin: 0;
   padding: 0;
   font-size: 1rem;
@@ -85,4 +85,34 @@ h1, h2, h3 {
   padding: 20px;
   // background: #f2f2f2;
   // margin-top: -21px; // todo
+}
+
+.modules-content {
+  display: flex;
+  .modules-content_left {
+    width: 300px;
+  }
+  .modules-content_right {
+    width: 100%;
+    height: calc(100vh - 100px);
+    border-left: 1px solid #eaeaea;
+    padding-left: 20px;
+    overflow-y: scroll;
+
+    h3 {
+      position: relative;
+      margin-bottom: 10px;
+      &::before {
+        content: '';
+        display: inline-block;
+        height: 1rem;
+        width: 3px;
+        background: #409EFF;
+        margin-right: 5px;
+        position: absolute;
+        top: 3px;
+        left: -8px;
+      }
+    }
+  }
 }
