--- a/src/components/js/lazyload/index.html
+++ b/src/components/js/lazyload/index.html
@@ -10,6 +10,7 @@
 	<div class="btn">
 		<button>本机延迟加载</button>
 		<button>Lozad</button>
+		<a href="https://gitee.com/mirrors/Lozadjs" target="_blank">Lozadjs</a>
 	</div>
 	<div class="image">
 		<img src="./20200527.jpeg" alt="" loading='lazy'>
