--- a/src/components/js/base.html
+++ b/src/components/js/base.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BASE</title>
   <script src="./正则表达式.js"></script>
+  <script src="./flat.js"></script>
+  <script src="./array-set.js"></script>
 </head>
 <body>
   <div class="query">querySelector</div>
