--- a/src/components/js/base.html
+++ b/src/components/js/base.html
@@ -7,6 +7,7 @@
   <script src="./正则表达式.js"></script>
   <script src="./flat.js"></script>
   <script src="./array-set.js"></script>
+  <script src="./Map.js"></script>
 </head>
 <body>
   <div class="query">querySelector</div>
