--- a/src/components/js/base.html
+++ b/src/components/js/base.html
@@ -8,6 +8,7 @@
   <script src="./flat.js"></script>
   <script src="./array-set.js"></script>
   <script src="./Map.js"></script>
+  <script src="./__proto__.prototype.js"></script>
 </head>
 <body>
   <div class="query">querySelector</div>
