--- a/src/components/js/base.html
+++ b/src/components/js/base.html
@@ -9,6 +9,7 @@
   <script src="./array-set.js"></script>
   <script src="./Map.js"></script>
   <script src="./__proto__.prototype.js"></script>
+  <script src="./es6-class.js"></script>
 </head>
 <body>
   <div class="query">querySelector</div>
