form表单验证测试

--- a/src/components/js/base.html
+++ b/src/components/js/base.html
@@ -10,6 +10,7 @@
   <script src="./Map.js"></script>
   <script src="./__proto__.prototype.js"></script>
   <script src="./es6-class.js"></script>
+  <script src="./tree.js"></script>
 </head>
 <body>
   <div class="query">querySelector</div>
