--- a/src/components/js/base.html
+++ b/src/components/js/base.html
@@ -11,6 +11,7 @@
   <script src="./__proto__.prototype.js"></script>
   <script src="./es6-class.js"></script>
   <script src="./tree.js"></script>
+  <script src="./getMonthCountDay.js"></script>
 </head>
 <body>
   <div class="query">querySelector</div>
