数组取相同和不同方法

--- a/src/components/js/base.html
+++ b/src/components/js/base.html
@@ -12,6 +12,7 @@
   <script src="./es6-class.js"></script>
   <script src="./tree.js"></script>
   <script src="./getMonthCountDay.js"></script>
+  <script src="./arrSetBetweenTwo.js"></script>
 </head>
 <body>
   <div class="query">querySelector</div>
