--- a/src/components/js/base.html
+++ b/src/components/js/base.html
@@ -13,6 +13,7 @@
   <script src="./tree.js"></script>
   <script src="./getMonthCountDay.js"></script>
   <script src="./arrSetBetweenTwo.js"></script>
+  <script src="./es6-arr.js"></script>
 </head>
 <body>
   <div class="query">querySelector</div>
