--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -116,3 +116,19 @@ h1, h2, pre {
     }
   }
 }
+
+.mt20 {
+  margin-top: 20px;
+}
+
+.mb20 {
+  margin-bottom: 20px;
+}
+
+.mr20 {
+  margin-right: 20px;
+}
+
+.ml20 {
+  margin-left: 20px;
+}
