--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import './common.scss';  // 分号必须
+@import './common.scss'; // 分号必须
 
 body {
   height: 100%;
@@ -10,7 +10,9 @@ html {
   height: 100%;
 }
 
-h1, h2, pre {
+h1,
+h2,
+pre {
   margin: 0;
   padding: 0;
   font-size: 1rem;
@@ -69,7 +71,7 @@ h1, h2, pre {
     // todo
     display: none;
     padding-right: 40px;
-    
+
     .el-button--text {
       font-size: 18px;
       color: #606266;
